Removed CanvasJS reliance; added test implementations of ChartJS and pulls from backend.

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
       <div id = "timeline" class = "col-md-10 test box">timeline</div>
 
       <div class = "row test">
-        <div id="root" class="col-md-3 test box">.col-md-3</div>
+        <div id="inoutchart" class="col-md-3 test box">.col-md-3</div>
     
         <div id="data" class="col-md-3 test box">.col-md-3</div>
         
