Added Weapon Type Chart

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
       <div class = "row test">
         <div id="inoutchart" class="col-md-3 test box">.col-md-3</div>
     
-        <div id="data" class="col-md-3 test box">.col-md-3</div>
+        <div id="weaponchart" class="col-md-3 test box">.col-md-3</div>
         
         <div id="data2" class="col-md-3 test box">.col-md-3</div>
 
