Moved data to correct source folder

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
     
         <div id="weaponchart" class="col-md-3 test box">.col-md-3</div>
         
-        <div id="data2" class="col-md-3 test box">.col-md-3</div>
+        <div id="heatmap" class="col-md-3 test box">.col-md-3</div>
 
         <div id="data2" class="col-md-3 test box">.col-md-3</div>
       </div>
