--- a/html/site.html
+++ b/html/site.html
@@ -14,6 +14,13 @@
 
     <body>
         <form></form>
+
+            <div class = "timeline">
+
+                <div class = "square">timeline</div>
+
+            </div>
+
             <div class="wrapper">  
 
                 <div class = "graphs">
@@ -86,7 +93,6 @@
                         </form>
                     </div>
                 </div>
-
 
 
 
