--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="manager">
+    <div id="manager" class="manager-component">
       
     </div>
 
